src/index.css
:root {
  --primary: #018dec;
  --primary-hover: #004676;
  --secondary: #ea8029;
  --secondary-hover: #7d3f0c;
  --white: #fffdfa;
  --black: #070606;
}

html,
body {
  height: 100%;
  margin: 0;
}

body {
  background-image: url('https://img.freepik.com/premium-photo/hologram-question-mark-dark-blue-background_486333-1662.jpg?w=900');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: var(--black);

  font-family: 'Milky Boba', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  letter-spacing: 5px;

  overflow: hidden;
}

#root {
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#splide01 {
  position: static;
}

